--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,4 +10,5 @@ jobs:
   build_and_verify:
     runs-on: ubuntu-latest
     steps:
-      - run: npm run lint && npm run build
+      - uses: actions/checkout@v2
+      - run: npm ci && npm run build
