--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,3 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
+        with:
+          apiKey: '${{ secrets.NEXT_PUBLIC_FIREBASE_APIKEY }}'
+          uthDomain: '${{ secrets.NEXT_PUBLIC_FIREBASE_AUTHDOMAIN'
+          projectId: '${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECTID }}'
+          storageBucket: '${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGEBUCKET }}'
+          messagingSenderId: '${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID }}'
+          appId: '${{ secrets.NEXT_PUBLIC_FIREBASE_APPID }}'
+          measurementId: '${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENTID }}'
