--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,17 +6,19 @@ name: Verify
   push:
     branches:
       - main
+
+env:
+  NEXT_PUBLIC_FIREBASE_APIKEY: '${{ secrets.NEXT_PUBLIC_FIREBASE_APIKEY }}'
+  NEXT_PUBLIC_FIREBASE_AUTHDOMAIN: '${{ secrets.NEXT_PUBLIC_FIREBASE_AUTHDOMAIN }}'
+  NEXT_PUBLIC_FIREBASE_PROJECTID: '${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECTID }}'
+  NEXT_PUBLIC_FIREBASE_STORAGEBUCKET: '${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGEBUCKET }}'
+  NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID: '${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID }}'
+  NEXT_PUBLIC_FIREBASE_APPID: '${{ secrets.NEXT_PUBLIC_FIREBASE_APPID }}'
+  NEXT_PUBLIC_FIREBASE_MEASUREMENTID: '${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENTID }}'
+
 jobs:
   build_and_verify:
     runs-on: ubuntu-latest
-    env:
-      apiKey: '${{ secrets.NEXT_PUBLIC_FIREBASE_APIKEY }}'
-      uthDomain: '${{ secrets.NEXT_PUBLIC_FIREBASE_AUTHDOMAIN'
-      projectId: '${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECTID }}'
-      storageBucket: '${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGEBUCKET }}'
-      messagingSenderId: '${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID }}'
-      appId: '${{ secrets.NEXT_PUBLIC_FIREBASE_APPID }}'
-      measurementId: '${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENTID }}'
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
