--- a/.github/workflows/build-lint-push.yml
+++ b/.github/workflows/build-lint-push.yml
@@ -3,6 +3,7 @@ name: Verify
   push:
     branches:
       - main
+      - development
 
 env:
   NEXT_PUBLIC_FIREBASE_APIKEY: '${{ secrets.NEXT_PUBLIC_FIREBASE_APIKEY }}'
