--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.1.4",
     "firebase": "^9.16.0",
     "framer-motion": "^9.0.0",
+    "js-cookie": "^3.0.1",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +28,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
