--- a/.github/workflows/build-lint-push.yml
+++ b/.github/workflows/build-lint-push.yml
@@ -1,18 +1,19 @@
 name: Verify
-'on':
+"on":
   push:
     branches:
       - main
       - development
 
 env:
-  NEXT_PUBLIC_FIREBASE_APIKEY: '${{ secrets.NEXT_PUBLIC_FIREBASE_APIKEY }}'
-  NEXT_PUBLIC_FIREBASE_AUTHDOMAIN: '${{ secrets.NEXT_PUBLIC_FIREBASE_AUTHDOMAIN }}'
-  NEXT_PUBLIC_FIREBASE_PROJECTID: '${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECTID }}'
-  NEXT_PUBLIC_FIREBASE_STORAGEBUCKET: '${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGEBUCKET }}'
-  NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID: '${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID }}'
-  NEXT_PUBLIC_FIREBASE_APPID: '${{ secrets.NEXT_PUBLIC_FIREBASE_APPID }}'
-  NEXT_PUBLIC_FIREBASE_MEASUREMENTID: '${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENTID }}'
+  NEXT_PUBLIC_FIREBASE_APIKEY: "${{ secrets.NEXT_PUBLIC_FIREBASE_APIKEY }}"
+  NEXT_PUBLIC_FIREBASE_AUTHDOMAIN: "${{ secrets.NEXT_PUBLIC_FIREBASE_AUTHDOMAIN }}"
+  NEXT_PUBLIC_FIREBASE_PROJECTID: "${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECTID }}"
+  NEXT_PUBLIC_FIREBASE_STORAGEBUCKET: "${{ secrets.NEXT_PUBLIC_FIREBASE_STORAGEBUCKET }}"
+  NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID: "${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID }}"
+  NEXT_PUBLIC_FIREBASE_APPID: "${{ secrets.NEXT_PUBLIC_FIREBASE_APPID }}"
+  NEXT_PUBLIC_FIREBASE_MEASUREMENTID: "${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENTID }}"
+  NEXT_PUBLIC_API: "https://fuse-ui.vercel.app/fuse-4210a/us-central1/api"
 
 jobs:
   build_and_verify:
