--- a/.github/workflows/build-lint-push.yml
+++ b/.github/workflows/build-lint-push.yml
@@ -13,7 +13,7 @@ env:
   NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID: "${{ secrets.NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID }}"
   NEXT_PUBLIC_FIREBASE_APPID: "${{ secrets.NEXT_PUBLIC_FIREBASE_APPID }}"
   NEXT_PUBLIC_FIREBASE_MEASUREMENTID: "${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENTID }}"
-  NEXT_PUBLIC_API: "https://fuse-ui.vercel.app/fuse-4210a/us-central1/api"
+  NEXT_PUBLIC_API: "${{ secrets.NEXT_PUBLIC_API }}"
 
 jobs:
   build_and_verify:
